# luizalabs-back-end-com-python

./: .gitignore  .gitmodules  README.md  requirements.txt
01-conhecendo-o-github-copilot-aumentando-sua-produtividade-na-programacao/: README.md
01-dominando-funcoes-python/: README.md
01-implementando-microsservicos-com-python-e-fastapi/: README.md
01-introducao-a-aplicacoes-rest/: README.md
01-introducao-a-banco-de-dados/: README.md
01-introducao-a-programacao-orientada-a-objetos-poo-com-python/: README.md
01-manipulacao-de-dados-com-fastapi-assincrono/: README.md
02-ambiente-de-desenvolvimento-e-primeiros-passos-com-python/: README.md
02-aprendendo-o-conceito-de-heranca-com-python/: README.md
02-autenticacao-e-autorizacao-com-fastapi/: README.md
02-boas-praticas-para-apis-restful/: README.md
02-conectando-python-a-banco-de-dados-relacionais/: README.md
02-configurando-e-usando-github-copilot/: README.md
02-explorando-banco-de-dados-relacionais-com-python-db-api/: README.md
03-aplicando-encapsulamento-em-python/: README.md
03-bases-de-prompt-engineering-para-github-copilot/: README.md
04-primeiros-passos-com-fastapi/src/: Insomnia_2025-12-08.yaml  main.py  pyproject.toml
04-primeiros-passos-com-fastapi/src/controllers/: post.py
04-primeiros-passos-com-fastapi/src/schemas/: post.py
04-primeiros-passos-com-fastapi/src/views/: post.py
06-gerenciamento-de-pacotes-convencoes-e-boas-praticas-python/: Pipfile  README.md  TODO  pyproject.toml
06-gerenciamento-de-pacotes-convencoes-e-boas-praticas-python/src/: desafio.py
(+159 files in other folders)
