[project]
name = "06-gerenciamento-de-pacotes-convencoes-e-boas-praticas-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Luciano",email = "lucianodacunha.net@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
